k8s/express-api/deploy-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: serrata-api-express
    namespace: serrata
    labels:
        app: serrata-api-express
spec:
    replicas: 1
    selector:
        matchLabels:
            app: serrata-api-express
    template:
        metadata:
            labels:
                app: serrata-api-express
        spec:
            containers:
                - name: serrata-api-express
                  image: tang0ch4rlie/expressserrata:latest
                  ports:
                      - containerPort: 3000

                  imagePullPolicy: Always
                  resources:
                      requests:
                          cpu: '250m'
