k8s/express-api/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: serrata-api-express-svc
    namespace: serrata
spec:
    type: ClusterIP
    selector:
        app: serrata-api-express
    ports:
        - protocol: 'TCP'
          port: 3000
          targetPort: 3000
